--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,9 @@ repositories {
 
 dependencies {
     compile "org.codehaus.groovy:groovy-all:2.4.7"
-	testCompile "junit:junit:4.12"
+    compile "org.slf4j:slf4j-api:1.7.21"
+    compile "ch.qos.logback:logback-core:1.1.7"
+    compile "ch.qos.logback:logback-classic:1.1.7"
+
+    testCompile "junit:junit:4.12"
 }
