--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@ apply plugin: "groovy"
 apply plugin: "eclipse"
 apply plugin: "idea"
 apply plugin: "maven"
+apply plugin: "application"
 
 sourceCompatibility = 1.8
 version "0.1"
 group "com.thomashan"
+
+mainClassName = "com.thomashan.retail.Demo"
 
 repositories {
     mavenLocal()
